--- a/client/src/app/pages/destinations/destinations.component.html
+++ b/client/src/app/pages/destinations/destinations.component.html
@@ -60,7 +60,7 @@
                 </div>
                 <p>12 Published Offers</p>
             </div>
-            <div class="destination-card-single">
+            <div class="destination-card-single" routerLink="/destinations/dubai">
                 <img
                     src="https://images.unsplash.com/flagged/photo-1559717201-fbb671ff56b7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1920&q=80">
                 <h3>Dubai</h3>
