--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
+<app-authenticate>
 <div class="container">
-    <app-header></app-header>
-    <router-outlet />
-    <app-footer></app-footer>
-</div>
+        <app-header></app-header>
+        <router-outlet />
+        <app-footer></app-footer>
+    </div>
+</app-authenticate>
