--- a/client/src/app/pages/register/register.component.html
+++ b/client/src/app/pages/register/register.component.html
@@ -1,6 +1,6 @@
 <main>
     <section class="register-form">
-        <form>
+        <form [formGroup]="profileForm" (ngSubmit)="register()">
             <div class="register-user-icon">
                 <svg xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
@@ -19,11 +19,11 @@
                                 d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
                         </svg>
                     </div>
-                    <input type="text" id="email" name="email">
+                    <input type="text" id="email" name="email" formControlName="email">
                 </div>
             </div>
             <div>
-                <label for="fname">First Name</label>
+                <label for="firstName">First Name</label>
                 <div class="input-with-icon-wrapper">
                     <div class="input-icon">
                         <svg xmlns="http://www.w3.org/2000/svg"
@@ -32,11 +32,11 @@
                                 d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H322.8c-3.1-8.8-3.7-18.4-1.4-27.8l15-60.1c2.8-11.3 8.6-21.5 16.8-29.7l40.3-40.3c-32.1-31-75.7-50.1-123.9-50.1H178.3zm435.5-68.3c-15.6-15.6-40.9-15.6-56.6 0l-29.4 29.4 71 71 29.4-29.4c15.6-15.6 15.6-40.9 0-56.6l-14.4-14.4zM375.9 417c-4.1 4.1-7 9.2-8.4 14.9l-15 60.1c-1.4 5.5 .2 11.2 4.2 15.2s9.7 5.6 15.2 4.2l60.1-15c5.6-1.4 10.8-4.3 14.9-8.4L576.1 358.7l-71-71L375.9 417z" />
                         </svg>
                     </div>
-                    <input type="text" id="fname" name="fname">
+                    <input type="text" id="firstName" name="firstName" formControlName="firstName">
                 </div>
             </div>
             <div>
-                <label for="lname">Last Name</label>
+                <label for="lastName">Last Name</label>
                 <div class="input-with-icon-wrapper">
                     <div class="input-icon">
                         <svg xmlns="http://www.w3.org/2000/svg"
@@ -45,7 +45,7 @@
                                 d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H322.8c-3.1-8.8-3.7-18.4-1.4-27.8l15-60.1c2.8-11.3 8.6-21.5 16.8-29.7l40.3-40.3c-32.1-31-75.7-50.1-123.9-50.1H178.3zm435.5-68.3c-15.6-15.6-40.9-15.6-56.6 0l-29.4 29.4 71 71 29.4-29.4c15.6-15.6 15.6-40.9 0-56.6l-14.4-14.4zM375.9 417c-4.1 4.1-7 9.2-8.4 14.9l-15 60.1c-1.4 5.5 .2 11.2 4.2 15.2s9.7 5.6 15.2 4.2l60.1-15c5.6-1.4 10.8-4.3 14.9-8.4L576.1 358.7l-71-71L375.9 417z" />
                         </svg>
                     </div>
-                    <input type="text" id="lname" name="lname">
+                    <input type="text" id="lastName" name="lastName" formControlName="lastName">
                 </div>
             </div>
             <div>
@@ -58,7 +58,7 @@
                                 d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z" />
                         </svg>
                     </div>
-                    <input type="password" id="password" name="password">
+                    <input type="password" id="password" name="password" formControlName="password">
                 </div>
             </div>
             <div>
@@ -71,7 +71,7 @@
                             d="M0 224c0 17.7 14.3 32 32 32s32-14.3 32-32c0-53 43-96 96-96H320v32c0 12.9 7.8 24.6 19.8 29.6s25.7 2.2 34.9-6.9l64-64c12.5-12.5 12.5-32.8 0-45.3l-64-64c-9.2-9.2-22.9-11.9-34.9-6.9S320 19.1 320 32V64H160C71.6 64 0 135.6 0 224zm512 64c0-17.7-14.3-32-32-32s-32 14.3-32 32c0 53-43 96-96 96H192V352c0-12.9-7.8-24.6-19.8-29.6s-25.7-2.2-34.9 6.9l-64 64c-12.5 12.5-12.5 32.8 0 45.3l64 64c9.2 9.2 22.9 11.9 34.9 6.9s19.8-16.6 19.8-29.6V448H352c88.4 0 160-71.6 160-160z" />
                     </svg>
                 </div>
-                <input type="password" id="repeat-password" name="repeat-password">
+                <input type="password" id="repeat-password" name="repeatPassword" formControlName="repeatPassword">
             </div>
         </div>
             <a href="" id="sign-in-link">Already have an account? Sign in.</a>
