--- a/client/src/app/pages/destinations/destinations.component.css
+++ b/client/src/app/pages/destinations/destinations.component.css
@@ -21,15 +21,36 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+    text-align: center;
 }
-.destinations-search-bar input {
+.destination-search-bar-container {
     position: absolute;
-    top: 60%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 20em;
+}
+.destinations-search-bar-wrapper {
+    position: relative;
+}
+.destinations-search-bar-wrapper > input {
     border-radius: 10px;
-    height: 1.5em;
+    width: 20em;
+    height: 2em;
+    font-size: 1.2em;
+    text-indent: 1.8em;
+}
+.destinations-search-bar-wrapper > input:focus {
+    outline: 2px solid #c5e0dc
+}
+.destinations-search-bar-icon {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+}
+.destinations-search-bar-icon > svg {
+    height: 1.3em;
+    display: block;
 }
 .destinations-cards-title-wrapper {
     display: flex;
@@ -51,34 +72,4 @@
     justify-content: center;
     margin-bottom: 2em;
     gap: 2em;
-}
-.destination-card-single {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 0.2em;
-    border-radius: 10px;
-    width: 20em;
-    height: 25em;
-    overflow: hidden;
-    box-shadow: 0 0 2em rgba(0, 0, 0, 0.2);
-}
-.destination-card-single > img {
-    width: 100%;
-    height: 70%;
-}
-.destination-card-single > h3 {
-    text-align: center;
-}
-.destination-card-single > p {
-    text-align: center;
-    font-size: 1.2em;
-    margin-top: auto;
-}
-.destination-card-single-location {
-    display: flex;
-    justify-content: center;
-    gap: 0.2em;
-    text-decoration: underline;
 }
