--- a/client/src/app/pages/destinations/destinations.component.html
+++ b/client/src/app/pages/destinations/destinations.component.html
@@ -39,6 +39,6 @@
             <app-destination-card *ngFor="let destination of destinationList | popularFilter: false" [destination]="destination"></app-destination-card>
             <app-add-destination-card></app-add-destination-card>
         </div>
-        <app-create-destination-modal *ngIf="modalService.modalStatus$ | async"></app-create-destination-modal>
+        <app-destination-modal *ngIf="modalService.modalStatus$ | async" (destinationAdded)="onDestinationAdded($event)"></app-destination-modal>
     </section>
 </main>
