--- a/client/src/app/shared/components/destination-card/destination-card.component.html
+++ b/client/src/app/shared/components/destination-card/destination-card.component.html
@@ -9,7 +9,7 @@
         </svg>
         <h6>{{destination.destinationLocation}}</h6>
     </div>
-    <div class="destination-card-single-edit-button" (click)="openEditModal()">
+    <div class="destination-card-single-edit-button" (click)="onEditClicked()">
         <svg xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <path
