--- a/client/src/app/shared/components/add-destination-card/add-destination-card.component.html
+++ b/client/src/app/shared/components/add-destination-card/add-destination-card.component.html
@@ -1,4 +1,4 @@
-<div class="add-card" (click)="openCreateModal()">
+<div class="add-card" (click)=" onCreateClicked()">
     <svg xmlns="http://www.w3.org/2000/svg" height="1em"
         viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
         <path
