--- a/client/src/app/shared/components/destination-card/destination-card.component.css
+++ b/client/src/app/shared/components/destination-card/destination-card.component.css
@@ -33,6 +33,7 @@ a {
     right: 1%;
 }
 .destination-card-single-edit-button > svg {
+    display: block;
     height: 1.5em;
     fill: var(--primary-color-background);
 }
