Implement search functionality

--- a/client/src/app/pages/destinations/destinations.component.html
+++ b/client/src/app/pages/destinations/destinations.component.html
@@ -7,18 +7,7 @@
         <div class="destinations-image-text-inside">
             <h3>Discover Your Perfect Destination: Plan Your Dream Getaway</h3>
         </div>
-        <div class="destination-search-bar-container">
-            <div class="destinations-search-bar-wrapper">
-                <div class="destinations-search-bar-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                        viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                        <path
-                            d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
-                    </svg>
-                </div>
-                <input type="text" placeholder="Search...">
-            </div>
-        </div>
+        <app-search />
     </section>
     <section class="destinations-cards-container">
         <div class="destinations-cards-title-wrapper">
@@ -29,7 +18,9 @@
         <div class="destinations-cards-wrapper">
             <app-destination-card *ngFor="let destination of destinationList | popularFilter: true"
                 [destination]="destination"
-                (detinationData)="onDestinationEdit($event)">
+                [destinationList]="destinationList"
+                (detinationData)="onDestinationEdit($event)"
+                (destinationListUpdated)="handleDestinationListUpdate($event)">
             </app-destination-card>
             <app-add-destination-card
                 (createDestinationClicked)="onDestinationCreate($event)">
@@ -42,9 +33,14 @@
         </div>
         <div class="destinations-cards-wrapper">
             <app-destination-card *ngFor="let destination of destinationList | popularFilter: false"
-                [destination]="destination" (detinationData)="onDestinationEdit($event)"></app-destination-card>
+                [destination]="destination"
+                [destinationList]="destinationList"
+                (detinationData)="onDestinationEdit($event)"
+                (destinationListUpdated)="handleDestinationListUpdate($event)">
+            </app-destination-card>
             <app-add-destination-card
-                (createDestinationClicked)="onDestinationCreate($event)"></app-add-destination-card>
+                (createDestinationClicked)="onDestinationCreate($event)">
+            </app-add-destination-card>
         </div>
         <ng-container *ngIf="(modalService.modalStatus$ | async) && isCreating; else editModal">
             <app-destination-modal
