Add the record, without page reload

--- a/client/src/app/pages/hotels/hotels.component.html
+++ b/client/src/app/pages/hotels/hotels.component.html
@@ -21,9 +21,11 @@
         </div>
     </section>
     <section class="destination-selected-hotel-cards-wrapper">
-        <app-add-destination-card />
+        <app-add-hotel-card />
         <app-hotel-card *ngFor="let hotel of destination?.hotels"
             [hotel]="hotel" />
     </section>
-    <app-hotel-modal *ngIf="(modalService.modalStatus$ | async)" [destinationId]='destination?._id'/>
+    <app-hotel-modal *ngIf="(modalService.modalStatus$ | async)"
+     [destination]="destination"
+     (hotelListUpdated)="handleHotelListUpdate($event)"/>
 </main>
