Hotel details routing

--- a/client/src/app/pages/hotels/hotel-card/hotel-card.component.html
+++ b/client/src/app/pages/hotels/hotel-card/hotel-card.component.html
@@ -17,6 +17,6 @@
             <p>{{hotel.rating}}</p>
             <p>Excellent</p>
         </div>
-        <button class="destination-selected-hotel-card-details">Check details</button>
+        <button [routerLink]="[hotel.hotelName, hotel._id]" class="destination-selected-hotel-card-details">Check details</button>
     </div>
 </div>
