--- a/client/src/app/shared/components/hotel-modal/hotel-modal.component.html
+++ b/client/src/app/shared/components/hotel-modal/hotel-modal.component.html
@@ -77,6 +77,7 @@
                     </div>
                 </div>
                 <div class="create-hotel-input-wrapper">
+                    <!-- fix this -->
                     <label for="hotel-rating" class="create-hotel-label">Rating</label>
                     <div class="create-hotel-input-with-icon">
                         <div class="input-icon">
@@ -90,7 +91,8 @@
                     </div>
                 </div>
                 <div class="create-hotel-input-wrapper">
-                    <label for="hotel-free-date" class="create-hotel-label">Free Date</label>
+                    <!-- fix this  -->
+                    <label for="hotel-free-date" class="create-hotel-label">Free Rooms</label>
                     <div class="create-hotel-input-with-icon">
                         <div class="input-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" height="1em"
