--- a/client/src/app/shared/components/hotel-modal/hotel-modal.component.html
+++ b/client/src/app/shared/components/hotel-modal/hotel-modal.component.html
@@ -11,104 +11,118 @@
         <h3 class="create-hotel-modal-title">Create Hotel</h3>
         <form [formGroup]="hotelForm" (ngSubmit)="createHotel()">
             <div class="create-hotel-form-wrapper">
-                <div class="create-hotel-input-wrapper">
-                    <label for="hotel-name" class="create-hotel-label">Hotel Name</label>
-                    <div class="create-hotel-input-with-icon">
-                        <div class="input-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                <path
-                                    d="M192 128c0-17.7 14.3-32 32-32s32 14.3 32 32v7.8c0 27.7-2.4 55.3-7.1 82.5l-84.4 25.3c-40.6 12.2-68.4 49.6-68.4 92v71.9c0 40 32.5 72.5 72.5 72.5c26 0 50-13.9 62.9-36.5l13.9-24.3c26.8-47 46.5-97.7 58.4-150.5l94.4-28.3-12.5 37.5c-3.3 9.8-1.6 20.5 4.4 28.8s15.7 13.3 26 13.3H544c17.7 0 32-14.3 32-32s-14.3-32-32-32H460.4l18-53.9c3.8-11.3 .9-23.8-7.4-32.4s-20.7-11.8-32.2-8.4L316.4 198.1c2.4-20.7 3.6-41.4 3.6-62.3V128c0-53-43-96-96-96s-96 43-96 96v32c0 17.7 14.3 32 32 32s32-14.3 32-32V128zm-9.2 177l49-14.7c-10.4 33.8-24.5 66.4-42.1 97.2l-13.9 24.3c-1.5 2.6-4.3 4.3-7.4 4.3c-4.7 0-8.5-3.8-8.5-8.5V335.6c0-14.1 9.3-26.6 22.8-30.7zM24 368c-13.3 0-24 10.7-24 24s10.7 24 24 24H64.3c-.2-2.8-.3-5.6-.3-8.5V368H24zm592 48c13.3 0 24-10.7 24-24s-10.7-24-24-24H305.9c-6.7 16.3-14.2 32.3-22.3 48H616z" />
-                            </svg>
+                <div class="create-hotel-leftside-wrapper">
+                    <div class="create-hotel-input-wrapper">
+                        <label for="hotel-name" class="create-hotel-label">Hotel Name</label>
+                        <div class="create-hotel-input-with-icon">
+                            <div class="input-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                                    viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    <path
+                                        d="M192 128c0-17.7 14.3-32 32-32s32 14.3 32 32v7.8c0 27.7-2.4 55.3-7.1 82.5l-84.4 25.3c-40.6 12.2-68.4 49.6-68.4 92v71.9c0 40 32.5 72.5 72.5 72.5c26 0 50-13.9 62.9-36.5l13.9-24.3c26.8-47 46.5-97.7 58.4-150.5l94.4-28.3-12.5 37.5c-3.3 9.8-1.6 20.5 4.4 28.8s15.7 13.3 26 13.3H544c17.7 0 32-14.3 32-32s-14.3-32-32-32H460.4l18-53.9c3.8-11.3 .9-23.8-7.4-32.4s-20.7-11.8-32.2-8.4L316.4 198.1c2.4-20.7 3.6-41.4 3.6-62.3V128c0-53-43-96-96-96s-96 43-96 96v32c0 17.7 14.3 32 32 32s32-14.3 32-32V128zm-9.2 177l49-14.7c-10.4 33.8-24.5 66.4-42.1 97.2l-13.9 24.3c-1.5 2.6-4.3 4.3-7.4 4.3c-4.7 0-8.5-3.8-8.5-8.5V335.6c0-14.1 9.3-26.6 22.8-30.7zM24 368c-13.3 0-24 10.7-24 24s10.7 24 24 24H64.3c-.2-2.8-.3-5.6-.3-8.5V368H24zm592 48c13.3 0 24-10.7 24-24s-10.7-24-24-24H305.9c-6.7 16.3-14.2 32.3-22.3 48H616z" />
+                                </svg>
+                            </div>
+                            <input id="hotel-name" class="create-hotel-input" name="hotelName"
+                                formControlName="hotelName">
                         </div>
-                        <input id="hotel-name" class="create-hotel-input" name="hotelName" formControlName="hotelName">
+                    </div>
+                    <div class="create-hotel-input-wrapper">
+                        <label for="hotel-location" class="create-hotel-label">Location</label>
+                        <div class="create-hotel-input-with-icon">
+                            <div class="input-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                                    viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    <path
+                                        d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+                                </svg>
+                            </div>
+                            <input id="hotel-location" class="create-hotel-input" name="hotelLocation"
+                                formControlName="hotelLocation">
+                        </div>
+                    </div>
+                    <div class="create-hotel-input-wrapper">
+                        <label for="hotel-image" class="create-hotel-label">Image URL</label>
+                        <div class="create-hotel-input-with-icon">
+                            <div class="input-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                                    viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    <path
+                                        d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+                                </svg>
+                            </div>
+                            <input id="hotel-image" class="create-hotel-input" name="imgURL" formControlName="imgURL">
+                        </div>
+                    </div>
+                    <div class="create-hotel-input-wrapper">
+                        <label for="hotel-stars" class="create-hotel-label">Stars</label>
+                        <div class="create-hotel-input-with-icon">
+                            <div class="input-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                                    viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    <path
+                                        d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+                                </svg>
+                            </div>
+                            <input id="hotel-stars" class="create-hotel-input" name="stars" formControlName="stars">
+                        </div>
+                    </div>
+                    <div class="create-hotel-input-wrapper">
+                        <label for="hotel-type" class="create-hotel-label">Type</label>
+                        <div class="create-hotel-input-with-icon">
+                            <div class="input-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                                    viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    <path
+                                        d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+                                </svg>
+                            </div>
+                            <input id="hotel-type" class="create-hotel-input" name="type" formControlName="type">
+                        </div>
+                    </div>
+                    <div class="create-hotel-input-wrapper">
+                        <!-- fix this -->
+                        <label for="hotel-price" class="create-hotel-label">Price</label>
+                        <div class="create-hotel-input-with-icon">
+                            <div class="input-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                                    viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    <path
+                                        d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
+                                </svg>
+                            </div>
+                            <input id="hotel-price" class="create-hotel-input" name="price" formControlName="price">
+                        </div>
+                    </div>
+                    <div class="create-hotel-input-wrapper">
+                        <label for="hotel-free-rooms" class="create-hotel-label">Free rooms</label>
+                        <div class="create-hotel-input-with-icon">
+                            <div class="input-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                                    viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                    <path
+                                        d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM323.8 202.5c-4.5-6.6-11.9-10.5-19.8-10.5s-15.4 3.9-19.8 10.5l-87 127.6L170.7 297c-4.6-5.7-11.5-9-18.7-9s-14.2 3.3-18.7 9l-64 80c-5.8 7.2-6.9 17.1-2.9 25.4s12.4 13.6 21.6 13.6h96 32H424c8.9 0 17.1-4.9 21.2-12.8s3.6-17.4-1.4-24.7l-120-176zM112 192a48 48 0 1 0 0-96 48 48 0 1 0 0 96z" />
+                                </svg>
+                            </div>
+                            <!-- fix this  -->
+                            <input id="freeRooms" class="create-hotel-input" name="freeRooms"
+                                formControlName="freeRooms">
+                        </div>
                     </div>
                 </div>
-                <div class="create-hotel-input-wrapper">
-                    <label for="hotel-location" class="create-hotel-label">Location</label>
-                    <div class="create-hotel-input-with-icon">
-                        <div class="input-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                <path
-                                    d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
-                            </svg>
+                <div class="create-hotel-rightside-wrapper">
+                    <div class="create-hotel-input-wrapper">
+                        <label for="hotel-description" class="create-hotel-label">Description</label>
+                        <div class="create-hotel-input-with-icon">
+                            <textarea id="description" class="create-hotel-input" name="description"
+                                formControlName="description"></textarea>
                         </div>
-                        <input id="hotel-location" class="create-hotel-input" name="hotelLocation" formControlName="hotelLocation">
-                    </div>
-                </div>
-                <div class="create-hotel-input-wrapper">
-                    <label for="hotel-image" class="create-hotel-label">Image URL</label>
-                    <div class="create-hotel-input-with-icon">
-                        <div class="input-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                <path
-                                    d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
-                            </svg>
-                        </div>
-                        <input id="hotel-image" class="create-hotel-input" name="imgURL" formControlName="imgURL">
-                    </div>
-                </div>
-                <div class="create-hotel-input-wrapper">
-                    <label for="hotel-stars" class="create-hotel-label">Stars</label>
-                    <div class="create-hotel-input-with-icon">
-                        <div class="input-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                <path
-                                    d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
-                            </svg>
-                        </div>
-                        <input id="hotel-stars" class="create-hotel-input" name="stars" formControlName="stars">
-                    </div>
-                </div>
-                <div class="create-hotel-input-wrapper">
-                    <label for="hotel-type" class="create-hotel-label">Type</label>
-                    <div class="create-hotel-input-with-icon">
-                        <div class="input-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                <path
-                                    d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
-                            </svg>
-                        </div>
-                        <input id="hotel-type" class="create-hotel-input" name="type" formControlName="type">
-                    </div>
-                </div>
-                <div class="create-hotel-input-wrapper">
-                    <!-- fix this -->
-                    <label for="hotel-rating" class="create-hotel-label">Rating</label>
-                    <div class="create-hotel-input-with-icon">
-                        <div class="input-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                <path
-                                    d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
-                            </svg>
-                        </div>
-                        <input id="hotel-rating" class="create-hotel-input" name="rating" formControlName="rating">
-                    </div>
-                </div>
-                <div class="create-hotel-input-wrapper">
-                    <!-- fix this  -->
-                    <label for="hotel-free-date" class="create-hotel-label">Free Rooms</label>
-                    <div class="create-hotel-input-with-icon">
-                        <div class="input-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                                viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                <path
-                                    d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM323.8 202.5c-4.5-6.6-11.9-10.5-19.8-10.5s-15.4 3.9-19.8 10.5l-87 127.6L170.7 297c-4.6-5.7-11.5-9-18.7-9s-14.2 3.3-18.7 9l-64 80c-5.8 7.2-6.9 17.1-2.9 25.4s12.4 13.6 21.6 13.6h96 32H424c8.9 0 17.1-4.9 21.2-12.8s3.6-17.4-1.4-24.7l-120-176zM112 192a48 48 0 1 0 0-96 48 48 0 1 0 0 96z" />
-                            </svg>
-                        </div>
-                        <input id="hotel-free-date" class="create-hotel-input" name="freeDate" formControlName="freeDate">
                     </div>
                 </div>
             </div>
-            <div class="create-hotel-buttons">
-                <button id="create-button" type="submit">Create</button>
-                <button id="cancel-button" (click)="closeHotelModal()">Cancel</button>
-            </div>
+                <div class="create-hotel-buttons">
+                    <button id="create-button" type="submit">Create</button>
+                    <button id="cancel-button" (click)="closeHotelModal()">Cancel</button>
+                </div>
         </form>
     </div>
 </div>
